chore: fix EOF newline in PR template (pre-commit)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
     "redhat.vscode-yaml",
     "stoplight.spectral",
     "GitHub.vscode-github-actions",
+    "charliermarsh.ruff",
+    "ms-python.python",
     "editorconfig.editorconfig"
   ]
 }
